endpoint update user added and fix handle errors
