# swagger_server/models/request_update_user.py
@@ -1,0 +1,115 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.user_data import UserData  # noqa: F401,E501
+from swagger_server import util
+
+
+class RequestUpdateUser(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, channel: str=None, external_transaction_id: str=None, data: UserData=None):  # noqa: E501
+        """RequestUpdateUser - a model defined in Swagger
+
+        :param channel: The channel of this RequestUpdateUser.  # noqa: E501
+        :type channel: str
+        :param external_transaction_id: The external_transaction_id of this RequestUpdateUser.  # noqa: E501
+        :type external_transaction_id: str
+        :param data: The data of this RequestUpdateUser.  # noqa: E501
+        :type data: UserData
+        """
+        self.swagger_types = {
+            'channel': str,
+            'external_transaction_id': str,
+            'data': UserData
+        }
+
+        self.attribute_map = {
+            'channel': 'channel',
+            'external_transaction_id': 'externalTransactionId',
+            'data': 'data'
+        }
+        self._channel = channel
+        self._external_transaction_id = external_transaction_id
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RequestUpdateUser':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The RequestUpdateUser of this RequestUpdateUser.  # noqa: E501
+        :rtype: RequestUpdateUser
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def channel(self) -> str:
+        """Gets the channel of this RequestUpdateUser.
+
+
+        :return: The channel of this RequestUpdateUser.
+        :rtype: str
+        """
+        return self._channel
+
+    @channel.setter
+    def channel(self, channel: str):
+        """Sets the channel of this RequestUpdateUser.
+
+
+        :param channel: The channel of this RequestUpdateUser.
+        :type channel: str
+        """
+
+        self._channel = channel
+
+    @property
+    def external_transaction_id(self) -> str:
+        """Gets the external_transaction_id of this RequestUpdateUser.
+
+
+        :return: The external_transaction_id of this RequestUpdateUser.
+        :rtype: str
+        """
+        return self._external_transaction_id
+
+    @external_transaction_id.setter
+    def external_transaction_id(self, external_transaction_id: str):
+        """Sets the external_transaction_id of this RequestUpdateUser.
+
+
+        :param external_transaction_id: The external_transaction_id of this RequestUpdateUser.
+        :type external_transaction_id: str
+        """
+
+        self._external_transaction_id = external_transaction_id
+
+    @property
+    def data(self) -> UserData:
+        """Gets the data of this RequestUpdateUser.
+
+
+        :return: The data of this RequestUpdateUser.
+        :rtype: UserData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: UserData):
+        """Sets the data of this RequestUpdateUser.
+
+
+        :param data: The data of this RequestUpdateUser.
+        :type data: UserData
+        """
+
+        self._data = data
