# swagger_server/swagger/swagger.yaml
@@ -30,6 +30,36 @@ paths:
           description: Not found users yet
       x-openapi-router-controller: swagger_server.controllers.all_users_controller.AllUsersView
   /users/{code_email}:
+    put:
+      tags:
+      - Update User
+      summary: Actualizar usuario.
+      description: Actualizar usuario.
+      operationId: update_user
+      parameters:
+      - name: code_email
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          title: code_email
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestUpdateUser'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseUpdateUser'
+        "400":
+          description: Bad Request
+      x-openapi-router-controller: swagger_server.controllers.update_user_controller.UpdateUserView
     delete:
       tags:
       - Delete User
@@ -288,6 +318,16 @@ components:
         code_email:
           type: string
           example: admin@xtrim.ec
+    RequestUpdateUser:
+      properties:
+        channel:
+          type: string
+          example: CHANNEL
+        externalTransactionId:
+          type: string
+          example: fcea920f7412b5da7be0cf42b8c93759
+        data:
+          $ref: '#/components/schemas/UserData'
     ApiData:
       type: object
       properties:
@@ -415,6 +455,20 @@ components:
         password:
           type: string
           example: Sditq124$
+      example:
+        address: Lugano 1255
+        identification_number: "11588468"
+        city: Quito
+        last_name: Ameal
+        entry_date: 2023-08-14
+        password: Sditq124$
+        role_id: 1
+        code_email: j.alcaraz@xtrim.ec
+        name: Jorge
+        cellphone: "3592211658"
+        department: ventas
+        email: j.alcaraz@xtrim.ec
+        status: true
     ResponseDeleteUser:
       properties:
         code:
@@ -553,6 +607,42 @@ components:
         internalTransactionId: d290f1ee-6c54-4b01-90e6-d701748f0851
         externalTransactionId: fcea920f7412b5da7be0cf42b8c93759
         message: Datos obtenidos exitosamente
+    ResponseUpdateUser:
+      properties:
+        code:
+          type: string
+          example: "200"
+        message:
+          type: string
+          example: Usuario actualizado exitosamente.
+        internalTransactionId:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        externalTransactionId:
+          type: string
+          example: fcea920f7412b5da7be0cf42b8c93759
+        data:
+          $ref: '#/components/schemas/UserData'
+      example:
+        code: "200"
+        data:
+          address: Lugano 1255
+          identification_number: "11588468"
+          city: Quito
+          last_name: Ameal
+          entry_date: 2023-08-14
+          password: Sditq124$
+          role_id: 1
+          code_email: j.alcaraz@xtrim.ec
+          name: Jorge
+          cellphone: "3592211658"
+          department: ventas
+          email: j.alcaraz@xtrim.ec
+          status: true
+        internalTransactionId: d290f1ee-6c54-4b01-90e6-d701748f0851
+        externalTransactionId: fcea920f7412b5da7be0cf42b8c93759
+        message: Usuario actualizado exitosamente.
     ResponseSignup:
       properties:
         code:
